--- a/WebsiteBanHang/Views/Layout/ProductLayout.cshtml
+++ b/WebsiteBanHang/Views/Layout/ProductLayout.cshtml
@@ -208,8 +208,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <p>
                         Gọi ngay để được tư vấn
                     </p>
-                    <p>Mail: banhangdienlanh@gmail.com</p>
-                    <p>sdt:  +12 34 995 0792</p>
+                    <p>Mail: vuvanhaohc123@gmail.com</p>
+                    <p>sdt:  +123456789</p>
                     <ul class="social">
                         <li><a href="#"><i> </i></a></li>
                         <li><a href="#"><i class="twitter"> </i></a></li>
@@ -233,7 +233,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
         <div class="footer-classs" style="background-color:black">
-            <p><b>Công ty cổ phần điện lạnh. GPDKKD: 0214342344 do sở KH & ĐT TP.HCM cấp ngày 02/01/2021.</b>  <a href="#" target="_blank">Điện lạnh </a> </p>
+            <p><b>Công ty cổ phần thiết bị điện tử Ezone Shop.</b></p>
         </div>
     </div>
 </body>
