--- a/WebsiteBanHang/Views/Layout/_AdminHeaderPartial.cshtml
+++ b/WebsiteBanHang/Views/Layout/_AdminHeaderPartial.cshtml
@@ -43,7 +43,7 @@
                     <h3 id="ThongBao" style="font-weight:bold; color:crimson; text-align:left"></h3>
                     <ul class="login-buttons">
                         <li><input class="btn-summit" type="submit" value="Đăng nhập" style="height: 51px; width: 199px;" /></li>
-                        <li><a href="#" class="btn-summit hvr-sweep-to-left" style="min-width: 150px; height: 47px; font-size: 16px; text-decoration:none">đăng ký</a></li>
+                        <li><a href="/Home/DangKy" class="btn-summit hvr-sweep-to-left" style="min-width: 150px; height: 47px; font-size: 16px; text-decoration:none">đăng ký</a></li>
                     </ul>
                 }
             </div>
