--- a/WebsiteBanHang/Views/Layout/RegisterLayout.cshtml
+++ b/WebsiteBanHang/Views/Layout/RegisterLayout.cshtml
@@ -69,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         Gọi ngay để được tư vấn
                     </p>
                     <p>Mail: banhangdienlanh@gmail.com</p>
-                    <p>sdt:  +12 34 995 0792</p>
+                    <p>sdt:  +123456789</p>
                     <ul class="social">
                         <li><a href="#"><i> </i></a></li>
                         <li><a href="#"><i class="twitter"> </i></a></li>
@@ -93,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
         <div class="footer-class">
-            <p>Công ty cổ phần điện lạnh. GPDKKD: 0214342344 do sở KH & ĐT TP.HCM cấp ngày 02/01/2021.  <a href="http://w3layouts.com/" target="_blank">Điện lạnh </a> </p>
+            <p>Công ty cổ phần thiết bị điện tử Ezone Shop </p>
         </div>
     </div>
 
