--- a/WebsiteBanHang/Views/Layout/AdminLayout.cshtml
+++ b/WebsiteBanHang/Views/Layout/AdminLayout.cshtml
@@ -177,7 +177,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; nganphamle@gmail.com</span>
+                        <span>Copyright &copy; Nhóm 2 mã nguồn mở ( QA C H V )</span>
                     </div>
                 </div>
             </footer>
