--- a/WebsiteBanHang/Views/Layout/HeaderTopPartial.cshtml
+++ b/WebsiteBanHang/Views/Layout/HeaderTopPartial.cshtml
@@ -36,7 +36,7 @@
             @Html.Action("GioHangPartial","GioHang")
             <div class="clearfix"> </div>
         </div>
-        <div class="clearfix"> </div>
+        <div style="margin-bottom : 20px" class="clearfix"> </div>
     </div>
 </div>
 
