--- a/WebsiteBanHang/Content/ProductLayout/css/memenu.css
+++ b/WebsiteBanHang/Content/ProductLayout/css/memenu.css
@@ -1,11 +1,17 @@
-.memenu{margin-bottom:0px;padding:0;width:100%;list-style:none;display:inline-block;position:relative;font-size:15px}
+.memenu{margin-bottom:0px;padding:0;/* width:100%; */list-style:none;display:inline-block;position:relative;font-size:15px}
 .memenu li{margin-bottom:-5px;display:inline}
-.memenu>li>a{float:left;padding:8px 30px;text-decoration:none;text-transform:capitalize;font-size:1em; font-weight: 500; -webkit-transition: all 0.3s ease-in-out;
+.memenu>li>a{
+	float:left;
+	padding:8px 30px;
+	text-decoration:none;
+	text-transform:capitalize;
+	font-size: 2;
+	font-size: 2;
+	font-weight: 500;
+	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	
-
 }
 .memenu>li.active>a{color:#00405d;}
 .memenu>li.right{float:right}
