--- a/WebsiteBanHang/Views/Layout/HomeLayout.cshtml
+++ b/WebsiteBanHang/Views/Layout/HomeLayout.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>websitye bán hàng điện lạnh</title>
+    <title>Ezone Shop - Trang chủ</title>
     <link href="~/Content/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="~/Content/fontawesome/css/all.css" rel="stylesheet" type="text/css" media="all">
     <link href="~/Content/fontawesome/css/all.min.css" rel="stylesheet" type="text/css" media="all">
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="footer-top-at">
 
                 <div class="col-md-4 amet-sed">
-                    <h4 style="color:black">Thông Tin</h4>
+                    <h4 style="color:black;margin-top:15px">Thông Tin</h4>
                     <ul class="nav-bottom">
                         <li><a href="#">How to order</a></li>
                
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </ul>
                 </div>
                 <div class="col-md-4 amet-sed ">
-                    <h4 style="color:black">Sản phẩm chất lượng</h4>
+                    <h4 style="color: black; margin-top: 15px">Sản phẩm chất lượng</h4>
 
                     <p>
                         Gọi ngay để được tư vấn
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </ul>
                 </div>
                 <div class="col-md-4 amet-sed">
-                    <h4 style="color:black">Newsletter</h4>
+                    <h4 style="color: black; margin-top: 15px">Newsletter</h4>
                     <p>
                         Sign Up to get all news update
                         and promo
